[package]
name = "umbra-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebSocket relay server for Umbra P2P messaging — handles signaling, offline message queuing, and single-scan friend adding"
rust-version = "1.80"

[[bin]]
name = "umbra-relay"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"

# Discovery service (OAuth2 + HTTP client)
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
base64 = "0.22"

# Sync (account sync blob storage)
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand = "0.8"
bs58 = "0.5"

# Federation (relay-to-relay mesh)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
